Support Java 10
Removing JSR223, it's limited to only one script at the time making
server boot time really slow (up to 12 minutes, now server loads under
50 seconds).
If you still want to use JSR223 I have open-sourced a version that
supports Java 10:
https://bitbucket.org/l2jserver/l2j-server-script-engine/
Updated dependencies.
Removed Jython support completely.
Improved unit testing.